--- a/main.html
+++ b/main.html
@@ -8,6 +8,36 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+		<tr>
+		<th>Roll numbers</th>
+		<th>Names</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr>
+		<td>1</td>
+		<td>John</td>
+		</tr>
+		<tr>
+		<td>2</td>
+		<td>Jane</td>
+		</tr>
+		<tr>
+		<td>3</td>
+		<td>Joe</td>
+		</tr>
+		</tbody>
+		</table>
+		
+		<ol>
+		<li><img src="https://picsum.photos/id/123/200/300" alt="some_text"></li>
+		<li><video controls><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"></video></li>
+		<li><audio controls><source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"></audio></li>
+		</ol>
+		
+		<h2>List of medias</h2>
     <script type="text/javascript" src="./script.js">
 </script>
 
