--- a/main.html
+++ b/main.html
@@ -33,8 +33,8 @@
 		
 		<ol>
 		<li><img src="https://picsum.photos/id/123/200/300" alt="some_text"></li>
-		<li><video controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"><source  type="video/mp4"></video></li>
-		<li><audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"><source type="audio/ogg"></audio></li>
+		<li><video controls><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"></video></li>
+		<li><audio controls><source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"></audio></li>
 		</ol>
 		
 		<h2>List of medias</h2>
