--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
 		<ol>
 		<li><img src="https://picsum.photos/id/123/200/300" alt="some_text"></li>
 		<li><video controls><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"></video></li>
-		<li><audio controls><source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"></audio></li>
+		<li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls><source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"></audio></li>
 		</ol>
 		
 		<h2>List of medias</h2>
